Added swagger docs
